# no-yapping

./: README.md  pyproject.toml
src/no_yapping/: __init__.py  checker.py
tests/: test_checker.py
