[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "no-yapping"
version = "0.1.0"
description = "A Flake8 plugin that detects functions with excessive comments"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Parth Paradkar" }
]
dependencies = [
    "flake8>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.entry-points."flake8.extension"]
NYP = "no_yapping.checker:NoYappingChecker"

[tool.hatch.build.targets.wheel]
packages = ["src/no_yapping"]
